addressed code review comments